# deal2lkit

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  VERSION  amg_8cc.html  amg_8cc_source.html  amg_8h.html  amg_8h_source.html  amg__muelu_8cc.html  amg__muelu_8cc_source.html  amg__muelu_8h.html  amg__muelu_8h_source.html  annotated.html  annotated.js  annotated_dup.js  any__data_8h.html  any__data_8h_source.html  assimp__interface_8cc.html  assimp__interface_8cc.js  assimp__interface_8cc_source.html  assimp__interface_8h.html  assimp__interface_8h.js  assimp__interface_8h_source.html  changes_8h.html  changes_8h_source.html  changes_after_1_0_0.html  classAnyData.js  class_any_data-members.html  class_any_data.html  class_any_data.js  class_conv_tables_1_1_helmholtz_problem-members.html  class_conv_tables_1_1_helmholtz_problem.html  class_conv_tables_1_1_helmholtz_problem.js  class_conv_tables_1_1_right_hand_side-members.html  class_conv_tables_1_1_right_hand_side.html  class_conv_tables_1_1_right_hand_side.js  class_conv_tables_1_1_solution-members.html  (+345 more)
apps/: conv-table.cc  parallel_laplace.cc  serial_laplace.cc  step-3.cc  step-40.cc  template.cc
cmake/: SAKConfig.cmake.in  SAKConfigVersion.cmake.in  fix_tests.sh  load_cmake_macros.cmake  setup_cached_variables.cmake  setup_compiler_flags.cmake  setup_custom_targets.cmake  setup_deal2lkit.cmake  setup_finalize.cmake  setup_write_config.cmake
cmake/config/: CMakeLists.txt  Config.cmake.in  ConfigVersion.cmake.in  Make.global_options.in
cmake/configure/: configure_assimp.cmake  configure_sundials.cmake
cmake/macros/: macro_add_flags.cmake  macro_configure_feature.cmake  macro_deal2lkit_add_library.cmake  macro_deal2lkit_find_library.cmake  macro_deal2lkit_initialize_cached_variables.cmake  macro_deal2lkit_invoke_autopilot.cmake  macro_deal2lkit_package_handle.cmake  macro_deal2lkit_query_git_information.cmake  macro_deal2lkit_setup_target.cmake  macro_deal_ii_find_path.cmake  macro_filter_system_libraries.cmake  macro_purge_feature.cmake  macro_register_feature.cmake  macro_remove_duplicates.cmake  macro_reset_cmake_required.cmake  macro_sak_add_library.cmake  macro_set_if_empty.cmake  macro_strip_flag.cmake  macro_to_string.cmake  (+2 more)
docker/: .dockerignore  Dockerfile.base.v8.5.0  Dockerfile.deal2lkit.v8.5.0  Makefile  base-template  deal2lkit-template
doxygen/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/assimp_importer/: CMakeLists.txt  assimp_importer.cc
examples/dynamic_navier_stokes/: CMakeLists.txt
examples/dynamic_navier_stokes/include/: navier_stokes_ida.h
examples/dynamic_navier_stokes/source/: main.cc  navier_stokes_ida.cc  navier_stokes_ida.prm
examples/dynamic_stokes/: CMakeLists.txt
examples/dynamic_stokes/include/: stokes_ida.h
examples/dynamic_stokes/scripts/: indent
examples/dynamic_stokes/source/: grid-2.2.ucd  main.cc  stokes_ida.cc  stokes_ida.prm
examples/heat_equation/: CMakeLists.txt
examples/heat_equation/include/: heat_ida.h
examples/heat_equation/source/: heat_ida.cc  heat_ida.prm  main.cc
examples/heat_equation/tests/: sample_test.cc  sample_test.output  tests.h
examples/poisson/: CMakeLists.txt  poisson.cc  poisson.prm
include/: CMakeLists.txt  boundary_condition.h  dae_time_integrator.h  dof_utilities.h  domain.h  error_handler.h  fe_values_cache.h  newton_argument.h  newton_solver.h  ode_argument.h  output_processor.h  parameter_acceptor.h  parsed_data_out.h  parsed_dirichlet_bcs.h  parsed_finite_element.h  parsed_function.h  parsed_grid_generator.h  parsed_mapped_functions.h  parsed_solver.h  post_processor.h  sak_data.h  sundials_interface.h  utilities.h  vector_space.h
scripts/: build_documentation.sh  check_indentation.sh  check_test  download_clang_format  dr.sh  indent  indent-all  indent_common.sh  set_cache.sh  setup_astyle.sh  travisci_rsa.enc
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.html  all_1d.js  all_1e.html  all_1e.js  all_1f.html  all_1f.js  all_2.js  all_20.html  all_20.js  all_21.html  all_21.js  all_22.html  all_22.js  all_23.html  all_23.js  all_3.js  all_34.html  all_35.html  all_36.html  all_37.html  all_38.html  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  (+353 more)
source/: CMakeLists.txt  arkode_interface.cc  assimp_interface.cc  dae_time_integrator.cc  domain.cc  error_handler.cc  ida_interface.cc  imex_stepper.cc  kinsol_interface.cc  newton_argument.cc  newton_solver.cc  ode_argument.cc  output_processor.cc  parameter_acceptor.cc  parsed_data_out.cc  parsed_dirichlet_bcs.cc  parsed_error_estimator.cc  parsed_finite_element.cc  parsed_function.cc  parsed_grid_generator.cc  parsed_grid_refinement.cc  parsed_kdtree_distance.cc  parsed_mapped_functions.cc  parsed_preconditioner.cc  parsed_preconditioner_amg.cc  parsed_preconditioner_jacobi.cc  parsed_quadrature.cc  parsed_zero_average_constraints.cc  post_processor.cc  sundials_interface.cc  utilities.cc  vector_space.cc
source/parsed_preconditioner/: amg.cc  amg_muelu.cc  ilu.cc  jacobi.cc
tests/: CMakeLists.txt  CMakeLists.txt_dealii  CMakeLists.txt_old  CTestTestfile.cmake  Makefile  any_data_01.cc  any_data_02.cc  any_data_02.output  any_data_03.cc  any_data_04.cc  any_data_05.cc  assimp_import_01.cc  boost_00.cc  boost_00.output  boost_00.with_boost=off.output  cmake_install.cmake  directory_00.cc  directory_00.output  dof_utilities_01.cc  dof_utilities_01.output  dof_utilities_02.cc  dof_utilities_02.with_trilinos=on.output  dof_utilities_03.cc  dof_utilities_03.with_trilinos=on.output  dof_utilities_04.cc  dof_utilities_05.cc  dof_utilities_06.cc  dof_utilities_07.cc  dof_utilities_08.cc  dof_utilities_08.with_trilinos=on.output  error_handler_01.cc  error_handler_01.output  error_handler_02.cc  error_handler_02.output  error_handler_03.cc  error_handler_03.output  error_handler_04.cc  error_handler_05.cc  error_handler_05.with_cxx11=on.output  error_handler_06.cc  (+181 more)
utilities/: CMakeLists-large.txt
(+325 files in other folders)
